# k8s-ai

./: .envrc  .gitignore  README.md  SECURITY.md  SECURITY_MODEL.md  create_readonly_kubeconfig.sh  holmesgpt-readonly-kubeconfig.yaml  main.py  pyproject.toml  rbac-readonly.yaml  requirements.txt  test_a2a_client.py  test_fix_recommendations.py  test_k8s_ai_diagnostics.py
k8s_ai/: __init__.py
k8s_ai/admin/: __init__.py  admin_api.py
k8s_ai/cli/: __init__.py  main.py
k8s_ai/core/: __init__.py  kubectl.py
k8s_ai/server/: __init__.py  diagnostic_executor.py  executor.py  main.py
k8s_ai/utils/: __init__.py  cluster_sessions.py  k8s_client.py
